--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2019.11.28
 chardet==3.0.4
 idna==2.9
 lxml==4.5.0
+psycopg2==2.8.4
+psycopg2-binary==2.8.4
 requests==2.23.0
 soupsieve==2.0
 urllib3==1.25.8
